--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
 
     <title>Mystery Box Foundation</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles (2).css" />
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   </head>
   <body>
